{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 1062,
  "lineage": "f78cd446-ae20-2964-b5ee-20d1f3d6190b",
  "resources": [
    {
      "module": "module.api_task",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:targetgroup/tests-api/4d0a7d6f1395a81b",
            "arn_suffix": "targetgroup/tests-api/4d0a7d6f1395a81b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:targetgroup/tests-api/4d0a7d6f1395a81b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tests-api",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.api_task",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:targetgroup/tests-api/4d0a7d6f1395a81b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:listener-rule/app/external/f8217e26f6125525/47d2c9a38ce3524d/32f4aa8307ca05b0",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "api.watislaf.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:listener-rule/app/external/f8217e26f6125525/47d2c9a38ce3524d/32f4aa8307ca05b0",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:listener/app/external/f8217e26f6125525/47d2c9a38ce3524d",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.api_task.aws_alb_target_group.api",
            "module.external_application_load_balancer.aws_alb.main",
            "module.external_application_load_balancer.aws_alb_listener.external_http",
            "module.external_application_load_balancer.aws_security_group.main",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.api_task",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_container",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:security-group/sg-0c49b10edb7924c4f",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c49b10edb7924c4f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dcbf1512818fccbd"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tests-api-container",
            "name_prefix": "",
            "owner_id": "211439781557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tests-api"
            },
            "tags_all": {
              "Name": "tests-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external_application_load_balancer.aws_security_group.main",
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c64d0622e678c2c6",
            "associate_with_private_ip": "172.18.101.180",
            "association_id": "eipassoc-0138cacdb9512b7fe",
            "domain": "vpc",
            "id": "eipalloc-0c64d0622e678c2c6",
            "instance": "i-0552c83fc1c1895fa",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0735881dd775f3815",
            "private_dns": "ip-172-18-101-180.eu-central-1.compute.internal",
            "private_ip": "172.18.101.180",
            "public_dns": "ec2-52-29-82-110.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.82.110",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion",
            "module.bastion.data.template_file.userdata",
            "module.key.aws_key_pair.bastion_key",
            "module.key.local_sensitive_file.bastion-private-key",
            "module.key.tls_private_key.t",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a485299eeb98b979",
            "arn": "arn:aws:ec2:eu-central-1:211439781557:instance/i-0552c83fc1c1895fa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0552c83fc1c1895fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "bastion_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0735881dd775f3815",
            "private_dns": "ip-172-18-101-180.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.18.101.180",
            "public_dns": "ec2-52-29-82-110.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.82.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "Name": "bastion_root"
                },
                "throughput": 0,
                "volume_id": "vol-0339b7e7e54c3aeaa",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea13de5c6b8c273b",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09266c10228adf541"
            ]
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.bastion.data.template_file.userdata",
            "module.key.aws_key_pair.bastion_key",
            "module.key.local_sensitive_file.bastion-private-key",
            "module.key.tls_private_key.t",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:security-group/sg-09266c10228adf541",
            "description": "EC2 Bastion Host Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "IPv4 route Open to Public Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "IPv6 route Open to Public Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09266c10228adf541",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "211439781557",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.external_application_load_balancer",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:loadbalancer/app/external/f8217e26f6125525",
            "arn_suffix": "app/external/f8217e26f6125525",
            "desync_mitigation_mode": "defensive",
            "dns_name": "external-1982050528.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:loadbalancer/app/external/f8217e26f6125525",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "external",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dcbf1512818fccbd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05318cd332c1ceffa"
              },
              {
                "subnet_id": "subnet-0ea13de5c6b8c273b"
              }
            ],
            "subnets": [
              "subnet-05318cd332c1ceffa",
              "subnet-0ea13de5c6b8c273b"
            ],
            "tags": {
              "Name": "external"
            },
            "tags_all": {
              "Name": "external"
            },
            "vpc_id": "vpc-0abf410b5f1e1e2da",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.external_application_load_balancer.aws_security_group.main",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.external_application_load_balancer",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "external_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:listener/app/external/f8217e26f6125525/47d2c9a38ce3524d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:listener/app/external/f8217e26f6125525/47d2c9a38ce3524d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:loadbalancer/app/external/f8217e26f6125525",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external_application_load_balancer.aws_alb.main",
            "module.external_application_load_balancer.aws_security_group.main",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.external_application_load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:security-group/sg-0dcbf1512818fccbd",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcbf1512818fccbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "common-external-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "211439781557",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb_cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06dd92ecc74fdfb36",
            "arn": "arn:aws:ec2:eu-central-1:211439781557:instance/i-0ace397dbae202c3b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mongo-instance-profile",
            "id": "i-0ace397dbae202c3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0346954735530b775",
            "private_dns": "ip-172-18-0-185.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.18.0.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-055b5b11b03623fab",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea223f40195d5702",
            "tags": {
              "Name": "Mongo-Primary",
              "Type": "primary"
            },
            "tags_all": {
              "Name": "Mongo-Primary",
              "Type": "primary"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b52c42124c197ae"
            ]
          },
          "dependencies": [
            "module.bastion.aws_eip.bastion",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion",
            "module.bastion.data.template_file.userdata",
            "module.key.aws_key_pair.bastion_key",
            "module.key.local_sensitive_file.bastion-private-key",
            "module.key.tls_private_key.t",
            "module.mongodb_cluster.aws_iam_instance_profile.mongo-instance-profile",
            "module.mongodb_cluster.aws_iam_role.mongo-role",
            "module.mongodb_cluster.aws_security_group.mongo_sg",
            "module.mongodb_cluster.data.aws_iam_policy_document.instance-assume-role-policy",
            "module.mongodb_cluster.data.aws_region.current",
            "module.mongodb_cluster.data.template_file.userdata",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:security-group/sg-08b52c42124c197ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b52c42124c197ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.18.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.18.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.18.0.0/16"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongo_sg",
            "name_prefix": "",
            "owner_id": "211439781557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Mongo_Security_Group"
            },
            "tags_all": {
              "Name": "Mongo_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003f8fc45cea89a3c",
            "association_id": "eipassoc-07fcdd6257fc16cdc",
            "domain": "vpc",
            "id": "eipalloc-003f8fc45cea89a3c",
            "instance": "i-008a4c082e9b7723b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-060de27df98215d8a",
            "private_dns": "ip-172-18-100-68.eu-central-1.compute.internal",
            "private_ip": "172.18.100.68",
            "public_dns": "ec2-3-78-71-79.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.71.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-instance-main"
            },
            "tags_all": {
              "Name": "nat-instance-main"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.nat.aws_network_interface.this",
            "module.network.module.nat.aws_security_group.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.nat",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:network-interface/eni-060de27df98215d8a",
            "attachment": [
              {
                "attachment_id": "eni-attach-06d7bbf1dca88949c",
                "device_index": 1,
                "instance": "i-008a4c082e9b7723b"
              }
            ],
            "description": "ENI for NAT instance main",
            "id": "eni-060de27df98215d8a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:84:66:3b:59:c9",
            "owner_id": "211439781557",
            "private_dns_name": "ip-172-18-100-68.eu-central-1.compute.internal",
            "private_ip": "172.18.100.68",
            "private_ip_list": [
              "172.18.100.68"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.18.100.68"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02683453b7b6b380d"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05318cd332c1ceffa",
            "tags": {
              "Name": "nat-instance-main"
            },
            "tags_all": {
              "Name": "nat-instance-main"
            }
          },
          "dependencies": [
            "module.network.module.nat.aws_security_group.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.nat",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08a9142f201409ebe1080289494",
            "instance_id": "i-008a4c082e9b7723b",
            "instance_owner_id": "211439781557",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-060de27df98215d8a",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08a9142f201409ebe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.nat.aws_network_interface.this",
            "module.network.module.nat.aws_security_group.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00f64a23f8a48a6fe1080289494",
            "instance_id": "i-008a4c082e9b7723b",
            "instance_owner_id": "211439781557",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-060de27df98215d8a",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00f64a23f8a48a6fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.nat.aws_network_interface.this",
            "module.network.module.nat.aws_security_group.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.nat",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:security-group/sg-02683453b7b6b380d",
            "description": "Security group for NAT instance main",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-02683453b7b6b380d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.18.0.0/24",
                  "172.18.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "main20231108182246049600000006",
            "name_prefix": "main",
            "owner_id": "211439781557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nat-instance-main"
            },
            "tags_all": {
              "Name": "nat-instance-main"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.nat",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3353035996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02683453b7b6b380d",
            "security_group_rule_id": "sgr-072ea037b35584961",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.nat.aws_security_group.this",
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.nat",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_any",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.18.0.0/24",
              "172.18.1.0/24"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-461565842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02683453b7b6b380d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.nat.aws_security_group.this",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:network-acl/acl-04094b72202d639b1",
            "default_network_acl_id": "acl-04094b72202d639b1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04094b72202d639b1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211439781557",
            "subnet_ids": [
              "subnet-00ca97d7ba11f1f24",
              "subnet-05318cd332c1ceffa",
              "subnet-0ea13de5c6b8c273b",
              "subnet-0ea223f40195d5702"
            ],
            "tags": {
              "Name": "dcms-default"
            },
            "tags_all": {
              "Name": "dcms-default"
            },
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:route-table/rtb-0a975e17cea329ab0",
            "default_route_table_id": "rtb-0a975e17cea329ab0",
            "id": "rtb-0a975e17cea329ab0",
            "owner_id": "211439781557",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dcms-default"
            },
            "tags_all": {
              "Name": "dcms-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:security-group/sg-073959b932aabfcc9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-073959b932aabfcc9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "211439781557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dcms-default"
            },
            "tags_all": {
              "Name": "dcms-default"
            },
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:internet-gateway/igw-0f3196e3ed7ecf6c3",
            "id": "igw-0f3196e3ed7ecf6c3",
            "owner_id": "211439781557",
            "tags": {
              "Name": "dcms"
            },
            "tags_all": {
              "Name": "dcms"
            },
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f3196e3ed7ecf6c3",
            "id": "r-rtb-006cd3681eb516db51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-006cd3681eb516db5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:route-table/rtb-08a9142f201409ebe",
            "id": "rtb-08a9142f201409ebe",
            "owner_id": "211439781557",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-060de27df98215d8a",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dcms-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "dcms-private-eu-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:route-table/rtb-00f64a23f8a48a6fe",
            "id": "rtb-00f64a23f8a48a6fe",
            "owner_id": "211439781557",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-060de27df98215d8a",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dcms-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "dcms-private-eu-central-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:route-table/rtb-006cd3681eb516db5",
            "id": "rtb-006cd3681eb516db5",
            "owner_id": "211439781557",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3196e3ed7ecf6c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dcms-public"
            },
            "tags_all": {
              "Name": "dcms-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d09c6d569156f7c",
            "route_table_id": "rtb-08a9142f201409ebe",
            "subnet_id": "subnet-0ea223f40195d5702"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054acaf3127b73ca6",
            "route_table_id": "rtb-00f64a23f8a48a6fe",
            "subnet_id": "subnet-00ca97d7ba11f1f24"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b079984bfa8d6048",
            "route_table_id": "rtb-006cd3681eb516db5",
            "subnet_id": "subnet-05318cd332c1ceffa"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7e8ac457085a5c9",
            "route_table_id": "rtb-006cd3681eb516db5",
            "subnet_id": "subnet-0ea13de5c6b8c273b"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:subnet/subnet-0ea223f40195d5702",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.18.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea223f40195d5702",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211439781557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dcms-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "dcms-private-eu-central-1a"
            },
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:subnet/subnet-00ca97d7ba11f1f24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.18.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ca97d7ba11f1f24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211439781557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dcms-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "dcms-private-eu-central-1b"
            },
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:subnet/subnet-05318cd332c1ceffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.18.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05318cd332c1ceffa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211439781557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dcms-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "dcms-public-eu-central-1a"
            },
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:subnet/subnet-0ea13de5c6b8c273b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.18.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea13de5c6b8c273b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211439781557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dcms-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "dcms-public-eu-central-1b"
            },
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:vpc/vpc-0abf410b5f1e1e2da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-04094b72202d639b1",
            "default_route_table_id": "rtb-0a975e17cea329ab0",
            "default_security_group_id": "sg-073959b932aabfcc9",
            "dhcp_options_id": "dopt-08121af603ba77c81",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abf410b5f1e1e2da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a975e17cea329ab0",
            "owner_id": "211439781557",
            "tags": {
              "Name": "dcms"
            },
            "tags_all": {
              "Name": "dcms"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_task",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:targetgroup/tests-web/b78aaad6777194f8",
            "arn_suffix": "targetgroup/tests-web/b78aaad6777194f8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:targetgroup/tests-web/b78aaad6777194f8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tests-web",
            "port": 4173,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_task",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:targetgroup/tests-web/b78aaad6777194f8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:listener-rule/app/external/f8217e26f6125525/47d2c9a38ce3524d/f3372076022e4607",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "www.watislaf.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:listener-rule/app/external/f8217e26f6125525/47d2c9a38ce3524d/f3372076022e4607",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:211439781557:listener/app/external/f8217e26f6125525/47d2c9a38ce3524d",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external_application_load_balancer.aws_alb.main",
            "module.external_application_load_balancer.aws_alb_listener.external_http",
            "module.external_application_load_balancer.aws_security_group.main",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_task.aws_alb_target_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.web_task",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_container",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:211439781557:security-group/sg-056856fc230e053f2",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056856fc230e053f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4173,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dcbf1512818fccbd"
                ],
                "self": false,
                "to_port": 4173
              }
            ],
            "name": "tests-web-container",
            "name_prefix": "",
            "owner_id": "211439781557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tests-web"
            },
            "tags_all": {
              "Name": "tests-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf410b5f1e1e2da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external_application_load_balancer.aws_security_group.main",
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}